// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders 1`] = `
<div
  className="AptoSpinner"
>
  <div
    className="AptoSpinner-spinner"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        r="26"
        transform="translate(32,32)"
      />
    </svg>
  </div>
</div>
`;

exports[`Spinner with no overlay renders 1`] = `
<div
  className="AptoSpinner AptoSpinner--noOverlay"
>
  <div
    className="AptoSpinner-spinner"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        r="26"
        transform="translate(32,32)"
      />
    </svg>
  </div>
</div>
`;

exports[`Spinner with text and no overlay renders 1`] = `
<div
  className="AptoSpinner AptoSpinner--noOverlay"
>
  <div
    className="AptoSpinner-spinner"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        r="26"
        transform="translate(32,32)"
      />
    </svg>
  </div>
  <div
    className="AptoSpinner-content"
  >
    foo
  </div>
</div>
`;

exports[`Spinner with text renders 1`] = `
<div
  className="AptoSpinner"
>
  <div
    className="AptoSpinner-spinner"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        r="26"
        transform="translate(32,32)"
      />
    </svg>
  </div>
  <div
    className="AptoSpinner-content"
  >
    foo
  </div>
</div>
`;
